23 April, 2001:  [v0.1.0]
	Ported to Redhat Linux.

24 April 2001: [v0.1.1]
	Makefile maintenance: specified gzip suffix.

02 November 2001: [v0.2.0]
	- 'sort2_vecmatrix' added to package.
	- 'ipiksrt' added to package.
	- Makefile maintenance.  Check for required packages, install src.

15 November 2001: [v0.2.1]
	Fix Makefile.  Install section wasn't creating directories.

22 September 2002: [v0.2.2]
	Add 'dshell' and 'dclean', and 'vitable'
	Upgraded Makefile

24 February 2006: [v0.2.3]
	Run ranlib on lib after installation for ld on Darwin.  add include
	files to testshell for gcc4.0.