@@ -1,2 +1,3 @@
 - Write documentation
 - shared library?
+- Use UNAME to set OS.
