@@ -19,3 +19,6 @@
 24 February 2006: [v0.2.3]
 	Run ranlib on lib after installation for ld on Darwin.  add include
 	files to testshell for gcc4.0.
+22 May 2006: [v0.2.4]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet;
+	added to TODO.
